Version 5.6
-----------
Bug Fixes:
* MDI accelerators (like Ctrl+F6) now work
* Fixed notification reflection in CDialog

New Features:
* Property Sheets are now supported. The files PropertySheet.cpp and 
   PropertySheet.h have been added to Win32++. These files define
   the CPropertySheet and CPropertyPage classes. The Property sheet generic 
   demonstrates the following:
  - Modal property sheets.
  - Modeless property sheets.
  - Wizards.
* The owner drawing of menus has been moved from CMenubar to CFrame. This
   provides the following:
  - Frames without rebars have themed menus.
  - Other popup menus belonging to CFrame (or CMainFrame) are themed.
  - Functions which customise the appearance of the menus are now located
     in CFrame. They are easily overriden for a different visual effect.     
* The icons used in popup menu items can come from several bitmap resources.
  When an application has several toolbars in a rebar, for example, the icons 
  from each of these can be displayed in popup menus.
* Added a colored rectangle around checkmarks.
* Added TabDialogDemo sample.

The following changes have been made to the Win32++ code:
Added  CPropertySheet class
Added  CPropertyPage class
Added  CFrame::DrawCheckmark
Added  CFrame::DrawMenuItem
Added  CFrame::DrawMenuText
Added  CFrame::OnDrawItem
Added  CFrame::OnInitMenuPopup
Added  CFrame::OnMeasureItem
Added  CFrame::AddMenuIcon
Added  CFrame::AddMenuIcons
Added  CFrame::GetMenuTheme
Added  CFrame::SetMenuTheme
Added  CMDIFrame::GetActiveMDIChildCWnd
Added  CWnd::CenterWindow
Removed CDialog::Center    (use CWnd::CenterWindow instead)
Removed CMenubar::SetIcons (use CFrame::AddMenuIcons instead)
Moved   CWnd::GradientFill to GradientFill
Moved   CWnd::SolidFill    to SolidFill
Renamed ThemeMenubar       to ThemeMenu 
Renamed CMenubar::GetTheme to CMenubar::GetMenubarTheme
Renamed CMenubar::SetTheme to CMenubar::SetMenubarTheme
Renamed CRebar::GetTheme   to CRebar::GetRebarTheme