@@ -1,6 +1,6 @@
 Microsoft Visual Studio Solution File, Format Version 9.00
-# Visual Studio 2005
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "Browser", "Browser_2005.vcproj", "{B6FA69C8-3608-4E54-B7CE-BB247D97E53E}"
+# Visual C++ Express 2005
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "Browser", "Browser_2005.vcproj", "{3A0119A6-A0E0-457C-A3FB-6748CF71F058}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -8,10 +8,10 @@ Global
 		Release|Win32 = Release|Win32
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-		{B6FA69C8-3608-4E54-B7CE-BB247D97E53E}.Debug|Win32.ActiveCfg = Debug|Win32
-		{B6FA69C8-3608-4E54-B7CE-BB247D97E53E}.Debug|Win32.Build.0 = Debug|Win32
-		{B6FA69C8-3608-4E54-B7CE-BB247D97E53E}.Release|Win32.ActiveCfg = Release|Win32
-		{B6FA69C8-3608-4E54-B7CE-BB247D97E53E}.Release|Win32.Build.0 = Release|Win32
+		{3A0119A6-A0E0-457C-A3FB-6748CF71F058}.Debug|Win32.ActiveCfg = Debug|Win32
+		{3A0119A6-A0E0-457C-A3FB-6748CF71F058}.Debug|Win32.Build.0 = Debug|Win32
+		{3A0119A6-A0E0-457C-A3FB-6748CF71F058}.Release|Win32.ActiveCfg = Release|Win32
+		{3A0119A6-A0E0-457C-A3FB-6748CF71F058}.Release|Win32.Build.0 = Release|Win32
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
