@@ -3,6 +3,7 @@ Version 5.6
 Bug Fixes:
 * MDI accelerators (like Ctrl+F6) now work
 * Fixed notification reflection in CDialog
+* Browser sample now compiles with VS 2005 Express
 
 New Features:
 * Property Sheets are now supported. The files PropertySheet.cpp and 
